# tartarus-bootloader

./: .clang-format  .gitignore  LICENSE  Makefile  README.md  conf.sh  config.md  elyboot.h  fab.lua  flake.nix  meson.build  meson_options.txt  protocol.md  tartarus.h  uefi_postprocess.sh
boot/: Makefile  meson.build
core/: Makefile  core.c  meson.build
core/arch/: acpi.h  cpu.h  disk.h  ptm.h  smp.h  vm.h
core/arch/uefi/: acpi.c  disk.c  entry.c  fb.c  time.c  uefi.c  uefi.h
core/arch/x86_64/: apinit.asm  cpu.c  cpu.h  cpuid.h  gdt.h  lapic.c  mem.asm  meson.build  msr.h  ptm.c  smp.c  smp.h  vm.c
core/arch/x86_64/bios/: acpi.c  entry.c  meson.build  tartarus.ld
core/arch/x86_64/bios/protocol/: elysium.asm  linux.asm  tartarus.asm
core/arch/x86_64/uefi/: acpi.c  disk.c  entry.c  fb.c  meson.build  time.c  uefi.c  uefi.h
core/arch/x86_64/uefi/protocol/: elysium.asm  linux.asm  tartarus.asm
core/common/: config.h  elf.c  elf.h  log.c  log.h  meson.build
core/dev/: acpi.c  acpi.h  meson.build
core/dev/acpi/tables/: madt.h
core/fs/: meson.build  vfs.c
core/lib/: container.h  mem.c  meson.build  string.c  string.h
core/memory/: heap.c  heap.h  meson.build  pmm.c  pmm.h
core/protocol/: elysium.c  linux.c  meson.build  protocol.c  protocol.h  tartarus.c
core/src/: core.c  core.h  entry.x86_64.bios.asm  entry.x86_64.bios.c  entry.x86_64.uefi.c
core/src/arch/: fb.h  time.h  vm.h
core/src/arch/x86_64/: cpu.c  cpu.h  gdt.c  lapic.c  lapic.h  smp.c  tsc.c  tsc.h  vm.c
core/src/arch/x86_64/bios/: acpi.c  disk.c  entry.asm  entry.c  fb.c  time.c
core/src/arch/x86_64/bios/protocol/: linux.asm
core/src/arch/x86_64/uefi/: acpi.c  disk.c  efi.c  efi.h  entry.c  fb.c  time.c
core/src/arch/x86_64/uefi/protocol/: linux.asm  tartarus.asm
core/src/common/: config.c  config.h  elf.c  fb.uefi.c  log.c  log.h  panic.c
core/src/cpu/: cpu.x86_64.c  cpu.x86_64.h  gdt.x86_64.c  gdt.x86_64.h  int.x86_64.bios.h
core/src/dev/: disk.c  disk.h
core/src/drivers/: acpi.h  disk.c  disk.h  disk.uefi.c
core/src/fs/: fat.c  fat.h  vfs.c  vfs.h
core/src/hal/: acpi.h  cpu.h  disk.h  fb.h  time.h  vmm.h
core/src/hal/uefi/: acpi.c  acpi.uefi.c  disk.c  fb.c  time.c
core/src/hal/x86_64/: apinit.asm  cpu.c  gdt.c  gdt.h  lapic.c  msr.h  smp.c  smp.h  vmm.c
core/src/hal/x86_64-bios/: acpi.c  disk.c  entry.c  fb.c  linux.asm  time.c
core/src/hal/x86_64-bios/protocol/: tartarus.asm
core/src/hal/x86_64-uefi/: entry.c
core/src/hal/x86_64-uefi/protocol/: tartarus.asm
core/src/lib/: container.h  format.c  format.h  math.h  mem.c  mem.h  string.c  symbol.h  time.c  time.h
core/src/memory/: heap.c  pmm.c  pmm.h  vmm.x86_64.c
core/src/protocol/: linux.c  linux.x86_64.uefi64.asm  protocol.h  tartarus.c
core/src/sys/: a20.x86_64.asm  efi.uefi.h  gdt.x86_64.c  smp.x86_64.c
core/support/: link.x86_64.bios.ld
subprojects/: cc-runtime.wrap  nyu-efi.wrap
